--- a/Library_management_system/App.config
+++ b/Library_management_system/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Library_management_system.My.MySettings.library_dbConnectionString"
+            connectionString="user id=root;server=localhost;password=mysql;database=library_db"
+            providerName="MySql.Data.MySqlClient" />
+    </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
